--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,10 @@ ansible_managed = Please do not change this file directly since it is managed by
 retry_files_enabled = False
 vault_password_file = ~/.vault_pass
 host_key_checking = False
+gathering = smart
+fact_caching = yaml
+fact_caching_connection = .facts
+fact_caching_timeout = 86400
 
 [ssh_connection]
 ssh_args = -o UserKnownHostsFile=/dev/null
